# NUEDC_2022_F

./: README.md
.cache/clangd/index/: 24cxx.c.DCCC96B6213153E0.idx  24cxx.h.195BDD4BBFECE851.idx  AD9959.c.5E6CC2EA68FC87A4.idx  AD9959.h.949C2B5FE34E0E07.idx  adc.c.38B5ED0503012034.idx  adc.h.C181FA6DDAA3341E.idx  app_hooks.c.E9140DA9C79A40B7.idx  bsp.c.4158A1C4A6AFFD92.idx  bsp.h.8EE5C393B55FB871.idx  cmsis_compiler.h.FDC3EA1FBF87D86F.idx  cmsis_version.h.C583277EF13AC6C3.idx  core_cm4.h.AE9A81E77C85A9C8.idx  cpu.h.E43199AF38007EA1.idx  cpu_bsp.c.302A76DA8AC139FC.idx  cpu_c.c.C2AB383E00328522.idx  cpu_cfg.h.DF5A6CD0085F7237.idx  cpu_core.c.7C36E072E78591F7.idx  cpu_core.h.1DA9ADCC66792D7A.idx  cpu_def.h.E759E2B2C6D108CB.idx  ctiic.c.EC9AF1E947E7D405.idx  ctiic.h.E8F576803440D9A9.idx  delay.c.8CC160C07538D8A1.idx  delay.h.318F25BF07A8A815.idx  font.h.F0CFDD71536D02EF.idx  ft5206.c.C9DE36177370A6AA.idx  ft5206.h.34673833F294F9E5.idx  gt9147.c.8463C62030A7DF5A.idx  gt9147.h.CEE9620F32C8C521.idx  includes.h.2131A563106190A4.idx  key.c.108FC73CC809684E.idx  key.h.9BE1DCA07BFED06D.idx  lcd.c.4DB6A216A2A1BF60.idx  lcd.h.3EEB5E0BC676BEAB.idx  led.c.B9BD5D3362B66122.idx  led.h.61E8DD7D339A8310.idx  lib_ascii.c.D48F9B25858E85D6.idx  lib_ascii.h.AE696C4CBBF1CEEE.idx  lib_cfg.h.EE56EDBF1074937A.idx  lib_def.h.3F858DD7A6FBE7BA.idx  lib_math.c.DE567001169D95B7.idx  (+120 more)
HARDWARE/INC/: AD9959.h  adc.h  lcd.h  switch.h  timer.h
HARDWARE/SRC/: AD9959.c  adc.c  ft5206.c  key.c  lcd.c  switch.c  timer.c
USER/: CMakeLists.txt  Convert.py  main.c  main.h  rfft.c  rfft.h  stm32f4xx_it.c  toolchain.cmake
